started working on a C extension for Python for a kd-tree with parallelized queries to make start point searching much faster

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Test</h1>
-        <button id = 'add-btn'>Add song</button>
+        <button id = 'add-btn' onclick="requestAddSong()">Add song</button>
     </body>
 </html>
 
